--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "sass": "^1.71.1"
   }
 }
